[tool.poetry]
name = "gtfparse"
version = "1.6.0"
description = "Parsing of General Transfer Format(GTF)/General Feature Format 3 (GFF3) genetic annotation files"
authors = ["Alex Rubinsteyn <alex.rubinsteyn@gmail.com>", "Miles Smith <miles-smith@omrf.org>"]
maintainers = ["Miles Smith <miles-smith@omrf.org>"]
license = "Apache-2.0"
classifiers=[
        "Development Status :: 4 - Beta",
        "Environment :: Console",
        "Operating System :: OS Independent",
        "Intended Audience :: Science/Research",
        "License :: OSI Approved :: Apache Software License",
        "Programming Language :: Python",
        "Topic :: Scientific/Engineering :: Bio-Informatics",
        "Programming Language :: Python :: 3",
        "Programming Language :: Python :: 3.6",
        "Programming Language :: Python :: 3.7",
        "Operating System :: MacOS :: MacOS X",
        "Operating System :: POSIX :: Linux",
    ]
include = ["gtfparse/tests/data/*.*"]
homepage = "https://github.com/milescsmith/gtfparse"
repository = "https://github.com/milescsmith/gtfparse"
readme = "README.rst"
keywords = ["annotation", "gtf", "gff3", "bioinformatics"]

[tool.poetry.dependencies]
python = "^3.8"
pandas = "^1.4.1"
tqdm = "^4.63.0"
swifter = { version = "^1.1.2", optional = true }
dask = { version = "^2022.03.0", optional = true}
modin = {version = "^0.13.3", optional = true }
coloredlogs = "^15.0.1"
numpy = "^1.22.3"

[tool.poetry.extras]
parallel = ["swifter", "dask"]
modin = ["modin"]

[tool.poetry.dev-dependencies]
black = "^22.1.0"
flake8 = "^4.0.1"
pyre-check = "^0.9.10"
isort = "^5.10.1"
mypy = "^0.941"
ipython = "^8.1.1"

[build-system]
requires = ["poetry_core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
