[tool.pdm]
[tool.pdm.dev-dependencies]
dev = [
    "mypy>=1.10.1",
    "pytest>=8.2.2",
    "nox>=2024.4.15",
    "ruff>=0.5.0",
    "sourcery>=1.19.0",
]

[tool.pdm.build]
includes = ["src/gtfparse", "tests"]

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[project]
authors = [
    {name = "Alex Rubinsteyn", email = "alex.rubinsteyn@gmail.com"},
    {name = "Miles Smith", email = "miles-smith@omrf.org"},
]
maintainers = [
    {name = "Miles Smith", email = "miles-smith@omrf.org"},
]
license = {text = "Apache-2.0"}
requires-python = "<4.0,>=3.10"
dependencies = [
    "pandas>=2.0.0",
    "tqdm>=4.66.4",
    "numpy>=2.0.0",
    "loguru>=0.7.2",
]
name = "gtfparse"
version = "2.2.0"
description = "Parsing of General Transfer Format(GTF)/General Feature Format 3 (GFF3) genetic annotation files"
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Operating System :: OS Independent",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Operating System :: MacOS :: MacOS X",
    "Operating System :: POSIX :: Linux",
]
readme = "README.rst"
keywords = [
    "annotation",
    "gtf",
    "gff3",
    "bioinformatics",
]

[project.urls]
homepage = "https://github.com/milescsmith/gtfparse"
repository = "https://github.com/milescsmith/gtfparse"

[project.optional-dependencies]
parallel = [
    "swifter>=1.4.0",
    "dask>=2024.6.2",
]